# alfreed

./: .dockerignore  .gitignore  DOCKER_USAGE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: default.yaml  production.yaml
data/: download.sh
docker/: Dockerfile  docker-compose.override.yml  docker-compose.windows.yml  docker-compose.yml  entrypoint.sh
scripts/: build-docker.ps1  build-docker.sh  entrypoint.sh  run-windows.bat  run-windows.ps1
src/alfreed/: __init__.py
src/alfreed/core/: __init__.py
src/alfreed/core/algorithms/: __init__.py  alignment.py  consensus.py  embedding.py  vector_search.py
src/alfreed/core/entities/: __init__.py  embedding.py  search_result.py  sequence.py  taxonomy.py
src/alfreed/core/interfaces/: __init__.py  consensus.py  models.py  repositories.py  services.py
src/alfreed/infrastructure/: __init__.py
src/alfreed/infrastructure/config/: __init__.py  logging.py  settings.py
src/alfreed/infrastructure/models/: __init__.py  custom_model.py  dnabert_model.py
src/alfreed/infrastructure/storage/: __init__.py
src/alfreed/interfaces/: __init__.py
src/alfreed/interfaces/cli/: __init__.py  commands.py  main.py
src/alfreed/repositories/: __init__.py  consensus_repository.py  embedding_repository.py  result_repository.py  sequence_repository.py  vector_store_repository.py
src/alfreed/services/: __init__.py  consensus_service.py  embedding_service.py  metadata_service.py  search_service.py  sequence_service.py
